# tripwire

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: make_demo.py
src/tripwire/: __init__.py  __main__.py  cli.py  drift.py  fingerprint.py  guard.py  inject.py  lockfile.py  mcp_wrap.py  models.py  policy.py  samples.py
tests/unit/: test_cli.py  test_drift.py  test_fingerprint.py  test_guard.py  test_inject.py  test_lockfile.py  test_policy.py
