[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tripwire"
version = "0.1.0"
description = "One import to stop a poisoned or rug-pulling MCP server from hijacking your agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viprasol Tech Private Limited", email = "support@viprasol.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "prompt-injection",
    "tool-poisoning",
    "agent-security",
    "llm-security",
    "rug-pull",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "ruff>=0.5,<0.16",
    "mypy>=1.10",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Viprasol-Tech/tripwire"
Repository = "https://github.com/Viprasol-Tech/tripwire"
Issues = "https://github.com/Viprasol-Tech/tripwire/issues"
Website = "https://viprasol.com"

[project.scripts]
tripwire = "tripwire.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tripwire"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["B008", "B027", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
